--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-prost = { workspace = true}
-prost-types = { workspace = true}
-tonic = { workspace = true}
-tokio = { workspace = true}
+prost = "0.13.4"
+prost-types = "0.13.4"
+tokio = "1.43.0"
+tonic = "0.12.3"
 
 [build-dependencies]
 tonic-build = { version = "0.12.3", features = ["prost"] }
