--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,14 @@ build = "build.rs"
 [dependencies]
 prost = "0.13.4"
 prost-types = "0.13.4"
-tonic = { version = "0.12.3", default-features = false }
-tokio = { version = "1.43.0", features = ["macros"] }
-
-[dependencies.tonic-web-wasm-client]
-version = "0.6.0"
-optional = true
+tonic = { version = "0.12.3", optional = true }
+tokio = { version = "1.43.0", features = ["macros"], optional = true} 
 
 [features]
 default = ["desktop"]
-desktop = ["tonic/codegen", "tonic/transport", "tonic/prost"]
-web = ["tonic-web-wasm-client"]
+desktop = ["tonic", "tokio", "tonic-build"]
+web = ["prost-build"]
 
 [build-dependencies]
-tonic-build = { version = "0.12.3", features = ["prost"] }
+tonic-build = { version = "0.12.3", features = ["prost"], optional = true }
+prost-build = { version = "0.13.4", optional = true }
