feat: add envoy HTTP/1.1
Signed-off-by: Amirhossein Akhlaghpour <m9.akhlaghpoor@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ tonic = { version = "0.12.3", optional = true }
 tokio = { version = "1.43.0", features = ["macros"], optional = true} 
 
 [features]
-default = ["desktop"]
+default = ["web"]
 desktop = ["tonic", "tokio", "tonic-build"]
 web = ["prost-build"]
 
